# relational_algebra

./: CMakeLists.txt  relational_algebra.cpp
.cache/clangd/index/: equiv_rel_test.cpp.D68EB3F1892D67D6.idx  relational_algebra.cpp.E2E94620D6B5EAC5.idx
tests/: CMakeLists.txt  equiv_rel_test.cpp
